// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not warn when valid values are passed for the content property 1`] = `
.emotion-0 {
  content: normal;
  content: none;
  content: counter;
  content: open-quote;
  content: close-quote;
  content: no-open-quote;
  content: no-close-quote;
  content: initial;
  content: inherit;
  content: "some thing";
  content: 'another thing';
  content: url("http://www.example.com/test.png");
  content: counter(chapter_counter);
  content: counters(section_counter,".");
  content: attr(value string);
}

<div
  className="emotion-0"
/>
`;

exports[`does warn when invalid values are passed for the content property 1`] = `
.emotion-0 {
  content: this is not valid;
}

<div
  className="emotion-0"
/>
`;

exports[`does warn when invalid values are passed for the content property 2`] = `
<div
  className="emotion-0"
/>
`;
